Fixing the text area autostretch bug. Make the decorators api interface symmetric

--- a/plugins/flowdock/app/assets/stylesheets/flowdock/jquery.mentionsInput.css
+++ b/plugins/flowdock/app/assets/stylesheets/flowdock/jquery.mentionsInput.css
@@ -8,7 +8,7 @@
   width: 100%;
   display: block;
   height: 40px;
-  max-height: 40px;
+  max-height: 120px;
   padding: 9px;
   border: 1px solid #dcdcdc;
   border-radius:3px;
